--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@
 }
 
 #lesson-number-container {
-    text-align: center
+    text-align: center;
 }
 
 #lesson-number {
@@ -61,7 +61,8 @@
     text-align: center;
 }
 
-#lesson-info-container {
+#lesson-time {
+    color: gray;
 }
 
 #classroom-number {
@@ -75,5 +76,5 @@
 
 table {
     border-collapse: collapse;
-    width: 100%
+    width: 100%;
 }
